# Basic_RAG_Pipeline

./: .gitignore  README.md  pyproject.toml
notebook/: rag_pdf_qa.ipynb
