[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
]
